<resources>
    <string name="dfu_feature_title">DFU</string>
    <string name="dfu_file_init_title">Init packet</string>
    <string name="dfu_file_init_message">Do you want to select the Init packet file?\n
		The Init packet file (*.dat) should contain the device type and revision, application version, list of supported Soft Devices and the firmware CRC
		in binary format or, with old versions of the DFU bootloader, only the CRC (CRC-CCITT-16).
		With the new version of the bootloader the extended Init packet is <b>required</b>.</string>
    <string name="dfu_uploading_percentage">%d%%</string>
    <string name="app_name">Arresto Connect</string>
    <string name="lbl_action_settings">Settings</string>
    <string name="link_host">arresto.in</string>
    <string name="lbl_google_maps_key">AIzaSyBX-PKcuo78niwnvEKdjj3Te8KulgHqi90</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_id">474420249834895</string>
    <string name="menu_vector_path">M15 25,L85 25,M15 50,L85 50,M15 75,L85 75</string>
    <string name="back_vector_path">M25 25,L75 75,M25 75,L75 25,M25 75,L75 25</string>
    <string name="file_provider_authority">app.com.arresto.Arresto_Connect</string>
    <string name="lbl_text_warning_nfc_is_off">NFC is currently turned off!</string>
    <string name="lbl_text_turn_on_nfc">This functionality can\'t be used without NFC enabled. Please turn on NFC in the Settings and then use the back button to return to this app.</string>
    <string name="lbl_text_update_settings">Update Settings</string>
    <string name="lbl_chng_ime_strng"><font color="@color/header_color" size="14"> If you have change your mobile <font color="#5050d0" size="16">Click Here</font>  to make a request to change your IMEI number and then contact to Admin.</font></string>
    <string name="lbl_disclaimer"><b>Inspection Disclaimer </b> – If any non-conformities are found during pre-use inspection, remove equipment immediately and contact your Company’s designated fall protection Competent Person for further guidance.</string>
    <string name="lbl_loading_str">Loading…</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_username">Username/ Email</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_remember">Remember Me</string>
    <string name="lbl_email_alert">Please Enter Username/Email</string>
    <string name="lbl_network_alert">Please check your network connection</string>
    <string name="lbl_reset_txt">Reset Password</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_add_more_field">Add</string>
    <string name="lbl_welcm_txt">Welcome</string>
    <string name="lbl_welcome_to_kare">Welcome</string>
    <string name="lbl_scan_qr_code">Scan QRCode</string>
    <string name="lbl_dashbrd_txt">Dashboard</string>
    <string name="lbl_mystr_txt">My Store</string>
    <string name="lbl_ast_inuse_txt">Assets in use</string>
    <string name="lbl_ast_regected_txt">Rejected Assets</string>
    <string name="lbl_rgistr_nw_txt">Register New Assets</string>
    <string name="lbl_scan_txt">Scan Asset</string>
    <string name="lbl_mnag_sit_txt">Manage Sites</string>
    <string name="lbl_my_asst_txt">My Registered Assets</string>
    <string name="lbl_preiodic_txt">Preventive Maintenance</string>
    <string name="lbl_knowledge_tree">Knowledge Tree</string>
    <string name="lbl_scheduler_txt">Scheduler</string>
    <string name="lbl_safety_txt">Safety Digitisation</string>
    <string name="lbl_inspection">Inspection</string>
    <string name="lbl_inspctndue_txt">Inspection Due</string>
    <string name="lbl_add_assets">Add Assets</string>
    <string name="lbl_add_master_data">Add Master Data</string>
    <string name="lbl_reports">Reports</string>
    <string name="lbl_inspection_report">Inspection Report</string>
    <string name="lbl_rams_report">Rams Reports</string>
    <string name="lbl_safety_reports">Safety Reports</string>
    <string name="lbl_safety_management_report">Safety Management Report</string>
    <string name="lbl_maintenance_report">Maintenance Report</string>
    <string name="lbl_projects_txt">Projects</string>
    <string name="lbl_rams">RAMS</string>
    <string name="lbl_asst_prodct_txt">Asset Products</string>
    <string name="lbl_ex_excl_txt">Export Excel</string>
    <string name="lbl_manul_ins_txt">Manually Insert</string>
    <string name="lbl_view_asst_prodct_txt">View Asset Products</string>
    <string name="lbl_asst_issu_txt">Asset Issue</string>
    <string name="lbl_inpt_asst_txt">Input of Asset</string>
    <string name="lbl_profile_txt">My Profile</string>
    <string name="lbl_message_txt">Alerts</string>
    <string name="lbl_auth_issu_txt">Authentication issue!</string>
    <string name="lbl_auth_issu_msg">This feature is not available for your login, please contact you company\'s designated fall protection competent person for further guidance .</string>
    <string name="lbl_wait_st">Please Wait…</string>
    <string name="lbl_add_photo_st">Add Photo</string>
    <string name="lbl_cpture_st">Take Photo</string>
    <string name="lbl_choose_photo_st">Choose from Gallery</string>
    <string name="lbl_cncl_st">Cancel</string>
    <string name="lbl_reject_st">Reject</string>
    <string name="lbl_aprov_st">Approve</string>
    <string name="lbl_slct_date_st">Select Date</string>
    <string name="lbl_entr_uin_st">Enter Batch and Serial Number</string>
    <string name="lbl_inpt_typ_st">Select Input Type</string>
    <string name="lbl_uin">UIN</string>
    <string name="lbl_manual_entry">Manual Entry</string>
    <string name="lbl_rfid_st">RFID</string>
    <string name="lbl_barcode_st">Barcode/QR Code</string>
    <string name="lbl_scan_label">Scan Label</string>
    <string name="lbl_qrcode_st">QR Code</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_ac_creat_st">Account Created</string>
    <string name="lbl_alrdy_lst_msg">This data is already in list</string>
    <string name="lbl_slct_inpt_msg">Please select an input method</string>
    <string name="lbl_noreg_dta_msg">No registered data found</string>
    <string name="lbl_nodue_dta_msg">No data for inspection due</string>
    <string name="lbl_nostr_dta_msg">Data not found in store</string>
    <string name="lbl_nouse_dta_msg">No data for used asset_id</string>
    <string name="lbl_noregected_dta_msg">Rejected data not found</string>
    <string name="lbl_noOvrdue_dta_msg">No data for Inspection Overdue</string>
    <string name="lbl_entr_crct_astsris_msg">Please enter a correct assets series</string>
    <string name="lbl_entr_crct_ast_msg">Please enter a correct asset_id</string>
    <string name="lbl_entr_clint_msg">Please enter client name</string>
    <string name="lbl_entr_clintAdd_msg">Please enter client address</string>
    <string name="lbl_entr_clintPh_msg">Please enter client phone number</string>
    <string name="lbl_entr_clintEmail_msg">Please enter client email.</string>
    <string name="lbl_add_ast_msg">Please add at least one assets or assets series.</string>
    <string name="lbl_srch_pram_msg">Please enter at least one searching parameter.</string>
    <string name="lbl_crct_pram_msg">Please enter correct searching parameters.</string>
    <string name="lbl_no_data_found">No data found</string>
    <string name="lbl_slct_dis_msg">Select a district</string>
    <string name="lbl_slct_crcl_msg">Select a circle</string>
    <string name="lbl_upldng_data_msg">Uploading data</string>
    <string name="lbl_signatr_msg">Please draw a signature</string>
    <string name="lbl_blank_name_msg">Name should not be blank</string>
    <string name="lbl_rmrk_name_msg">Remark should not be blank</string>
    <string name="lbl_desig_name_msg">Designation should not be blank</string>
    <string name="lbl_ofline_dtaSav_msg">You are offline, data can not upload, but saved in database</string>
    <string name="lbl_pl_slct_msg">Please select</string>
    <string name="lbl_fil_obsrvtn_msg">Please fill last added observation first</string>
    <string name="mlbl_isng_dta_msg">Please contact to administration for missing data</string>
    <string name="lbl_cptr_aftrImg_msg">Please capture after image.</string>
    <string name="lbl_blank_obsrv_msg">You have blank credentials for any observation please fill or delete it.</string>
    <string name="lbl_fix_loc_msg">This location fixed for this site.</string>
    <string name="lbl_scn_rfid_msg">Please scan RFID tag</string>
    <string name="lbl_scn_barcode_msg">Please scan barcode</string>
    <string name="lbl_entr_uin_msg">Please enter UIN</string>
    <string name="lbl_inspect_msg">Please inspect all elements first</string>
    <string name="lbl_try_again_msg">Try again</string>
    <string name="lbl_no_subcat_msg">No subcategory for this parent</string>
    <string name="lbl_entr_qty_msg">Please enter quantity for all assets series</string>
    <string name="lbl_entr_qtyast_msg">Please enter quantity for all assets.</string>
    <string name="lbl_srch_msg">Search client ,assets series ,assets etc.</string>
    <string name="lbl_savd_msg">Sheet saved successfully</string>
    <string name="lbl_pls_takePicture">Please take picture</string>
    <string name="lbl_close_titl">App closing</string>
    <string name="lbl_close_app_msg">Do you want to close the app?</string>
    <string name="lbl_creat_ac_st">Create Account</string>
    <string name="lbl_sbmit_st">Submit</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_cntnue_st">Continue</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_ok_st">OK</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_rscan_st">Rescan</string>
    <string name="lbl_clr_st">Clear</string>
    <string name="lbl_ad_schdulr_st">Add to Scheduler</string>
    <string name="lbl_cntinue_ins_st">Continue Inspection</string>
    <string name="lbl_strt_periodic_st">Start preventive maintenance</string>
    <string name="lbl_ad_tocart_st">Website</string>
    <string name="lbl_share_st">Share</string>
    <string name="lbl_view_rep_st">View Report</string>
    <string name="lbl_download_excl_st">Download Excel</string>
    <string name="lbl_view_detail_st">History</string>
    <string name="lbl_checkin_st">Check In</string>
    <string name="lbl_checkout_st">Check Out</string>
    <string name="lbl_image">Image</string>
    <string name="lbl_doc_st">Document</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_site_id">Site Id</string>
    <string name="lbl_job_card_no">Job Card No.</string>
    <string name="lbl_sms_no">SMS No.</string>
    <string name="lbl_asset_series">Asset Series</string>
    <string name="lbl_asset">Asset</string>
    <string name="lbl_s_no">S.No.</string>
    <string name="lbl_client_name">Client Name</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_confirm">I Confirm</string>
    <string name="lbl_not_ok">Not OK</string>
    <string name="lbl_confirm_msg">Before use. I have inspected the asset according to the Pre Use Inspection Guideline</string>
    <string name="lbl_remark_msg">If not ok then please leave a remark</string>
    <string name="lbl_agree">Agree</string>
    <string name="lbl_asset_name">Asset Name</string>
    <string name="lbl_Result">Result :</string>
    <string name="lbl_term_conditions">Term &amp; Conditions</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_start_scan">Start Scan</string>
    <string name="lbl_stop_scan">Stop Scan</string>
</resources>