<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:orientation="vertical">


        <app.com.arresto.arresto_connect.custom_views.My_TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@color/app_text"
            android:gravity="center"
            android:text="@string/lbl_confirm"
            android:textColor="@color/app_background"
            app:bg_color="2"
            app:bg_type="color_bg"
            app:text_color="1" />

        <app.com.arresto.arresto_connect.custom_views.My_TextView
            android:id="@+id/msg_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/lbl_confirm_msg"
            android:textColor="@color/button_bg"
            android:textSize="15sp"
            app:bg_color="0"
            app:lbl_text="lbl_confirm_msg"
            app:bg_type="color"
            app:text_color="2" />

        <app.com.arresto.arresto_connect.custom_views.My_EditText
            android:id="@+id/edt_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="@dimen/margin_80dp"
            android:background="@drawable/border_bg"
            android:gravity="center_horizontal|top"
            android:hint="@string/lbl_remark_msg"
            android:padding="15dp"
            android:textColor="@color/button_bg"
            android:textSize="15dp"
            app:bg_color="2"
            app:bg_type="border_bg"
            app:lbl_text="lbl_remark_msg"
            app:text_color="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <app.com.arresto.arresto_connect.custom_views.My_TextView
                android:id="@+id/not_ok_btn"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/lbl_not_ok"
                app:lbl_text="lbl_not_ok"
                android:textColor="@color/app_background"
                app:bg_color="2"
                app:bg_type="round_bg"
                app:text_color="1" />

            <app.com.arresto.arresto_connect.custom_views.My_TextView
                android:id="@+id/ok_btn"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/lbl_ok_st"
                android:textColor="@color/app_background"
                app:bg_color="2"
                app:bg_type="round_bg"
                app:lbl_text="lbl_ok_st"
                app:text_color="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>