<!--
  ~  Copyright (c)
  ~  @website: http://arresto.in/
  ~  @author: Arresto Solutions Pvt. Ltd.
  ~  @license: http://arresto.in/
  ~
  ~  The below module/code/specifications belong to Arresto Solutions Pvt. Ltd. solely.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="35dp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbarStyle="outsideInset"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <HorizontalScrollView
                android:id="@+id/horizontalView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none">

                <TableLayout
                    android:id="@+id/table_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:showDividers="middle"
                    android:stretchColumns="1,2" />
            </HorizontalScrollView>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            app:elevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:windowSoftInputMode="adjustResize"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_bg_white"
                    android:imeOptions="actionNext" />

                <app.com.arresto.arresto_connect.custom_views.My_TextView
                    app:lbl_text="lbl_search"
                    android:id="@+id/search_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/app_text"
                android:scrollbars="none">

                <!--<TableLayout-->
                <!--android:id="@+id/table_01"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:paddingLeft="5dip"-->
                <!--android:paddingRight="5dp"-->
                <!--android:showDividers="middle"-->
                <!--android:stretchColumns="1,2">-->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:showDividers="middle"
                    android:stretchColumns="1,2">

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_s_no"
                        android:id="@+id/ro_ht1"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/lbl_s_no"
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_client_name"
                        android:id="@+id/ro_ht2"
                        android:gravity="center"
                        android:text="@string/lbl_client_name"
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_asset"
                        android:id="@+id/ro_ht3"
                        android:gravity="center"
                        android:text="@string/lbl_asset"
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_asset_series"
                        android:id="@+id/ro_ht4"
                        android:gravity="center"
                        android:text="@string/lbl_asset_series"
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_report_no."
                        android:id="@+id/ro_ht5"
                        android:gravity="center"
                        android:text="@string/lbl_report_no."
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_site_id"
                        android:id="@+id/ro_ht6"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/lbl_site_id"
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_job_card_no"
                        android:id="@+id/ro_ht7"
                        android:gravity="center"
                        android:text="@string/lbl_job_card_no"
                        android:singleLine="true"
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_sms_no"
                        android:id="@+id/ro_ht8"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/lbl_sms_no"
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_status"
                        android:id="@+id/ro_ht9"
                        android:gravity="center"
                        android:text="@string/lbl_status"
                        android:textColor="@color/button_bg" />

                    <app.com.arresto.arresto_connect.custom_views.My_TextView
                        app:lbl_text="lbl_date"
                        android:id="@+id/ro_ht10"
                        android:gravity="center"
                        android:text="@string/lbl_date"
                        android:textColor="@color/button_bg" />
                </TableRow>
                <!--</TableLayout>-->
            </HorizontalScrollView>
        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <app.com.arresto.arresto_connect.custom_views.My_TextView
        app:lbl_text="lbl_download_excl_st"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/round_bg"
        android:backgroundTint="@color/app_text"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_10dp"
        android:paddingRight="@dimen/margin_10dp"
        android:text="@string/lbl_download_excl_st"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/button_bg"
        android:textSize="@dimen/margin_14dp" />
</RelativeLayout>