<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <app.com.arresto.arresto_connect.custom_views.My_TextView
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30dp"
        android:background="@color/app_text"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:text="@string/lbl_pl_slct_msg"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:lbl_text="lbl_pl_slct_msg" />

    <app.com.arresto.arresto_connect.custom_views.My_EditText
        android:id="@+id/editSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dia"
        android:layout_margin="8dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/search_icon"
        android:drawablePadding="@dimen/margin_8dp"
        android:hint="@string/lbl_search"
        android:padding="@dimen/margin_5dp"
        android:textSize="@dimen/margin_14dp"
        app:lbl_text="lbl_search" />

    <ListView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_ok"
        android:layout_below="@+id/editSearch"
        android:layout_margin="5dp"
        android:dividerHeight="6dp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/app_text"
        android:clickable="true"
        android:text="@string/lbl_ok_st"
        android:textColor="@color/app_background"
        android:textStyle="bold" />


</RelativeLayout>