<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_start_scan" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_stop_scan" />

        <app.com.arresto.arresto_connect.custom_views.My_TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Result"
            app:lbl_text="lbl_Result"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--                <com.funcode.decoder.trial.FunDecode-->
            <!--                    android:id="@+id/funDecode1"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_alignParentTop="true"-->
            <!--                    android:layout_centerHorizontal="true"-->
            <!--                    />-->
            <!--                <app.com.arresto.arresto_connect.third_party.Funcode.MyRangeView-->
            <!--                    android:id="@+id/rangeView1"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    />-->
        </FrameLayout>
    </LinearLayout>


</LinearLayout>
