<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    tools:ignore="WebViewLayout">

    <app.com.arresto.arresto_connect.custom_views.My_TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lbl_term_conditions"
        app:lbl_text="lbl_term_conditions"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/html_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />
    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btns_layr"
        android:visibility="visible" />
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:fillViewport="true"-->
<!--        android:layout_above="@+id/btns_layr"-->
<!--        android:nestedScrollingEnabled="true">-->

<!--    </ScrollView>-->


    <LinearLayout
        android:id="@+id/btns_layr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_close"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_close" />

        <Button
            android:id="@+id/button_ok"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_agree" />
    </LinearLayout>
</RelativeLayout>